[gd_scene load_steps=9 format=2]

[ext_resource path="res://Resources/Textures/Entities/Enemies/shooter.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Entities/Enemies/Shooter.gd" type="Script" id=2]
[ext_resource path="res://Resources/Audio/FX/EnemyDamage.wav" type="AudioStream" id=3]
[ext_resource path="res://Resources/Audio/FX/Old/Shootsound.wav" type="AudioStream" id=4]
[ext_resource path="res://Scenes/MainScenes/Audio.gd" type="Script" id=5]

[sub_resource type="CanvasItemMaterial" id=3]
light_mode = 1

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 27.9307, 27.5772 )

[sub_resource type="OccluderPolygon2D" id=2]
polygon = PoolVector2Array( 43, 0, 2, -42, -40, 0, 2, 40 )

[node name="Shooter" type="KinematicBody2D"]
modulate = Color( 0, 0, 0, 1 )
collision_layer = 32
collision_mask = 89
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 3 )
position = Vector2( -2.14577e-06, -0.500006 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.75, -0.75 )
rotation = 0.785398
shape = SubResource( 1 )

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="DamageTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
position = Vector2( -2, 0 )
occluder = SubResource( 2 )

[node name="DamageAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
script = ExtResource( 5 )

[node name="ShootAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
script = ExtResource( 5 )

[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
[connection signal="timeout" from="DamageTimer" to="." method="_on_DamageTimer_timeout"]
